--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,15 +1,12 @@
 Package: Dashboard.Templates
-Title: What the Package Does (One Line, Title Case)
+Title: Provides template Markdown-Pages for the Momentum Dashboard 
 Version: 0.0.0.9000
 Authors@R: 
-    person(given = "First",
-           family = "Last",
-           role = c("aut", "cre"),
-           email = "first.last@example.com",
-           comment = c(ORCID = "YOUR-ORCID-ID"))
-Description: What the package does (one paragraph).
-License: `use_mit_license()`, `use_gpl3_license()` or friends to
-    pick a license
+    person(given = "Richard",
+           family = "Janzen",
+           email = "richard.janzen@studserv.uni-leipzig.de")
+Description: This package provides templates for the Momentum Dashboard of the Universität Leipzig.
+License: use_gpl3_license()
 Encoding: UTF-8
 LazyData: true
 Roxygen: list(markdown = TRUE)
