--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -4,8 +4,9 @@ Version: 0.0.0.9000
 Authors@R: 
     person(given = "Richard",
            family = "Janzen",
+           role = c("aut", "cre"),
            email = "richard.janzen@studserv.uni-leipzig.de")
-Description: This package provides templates for the Momentum Dashboard of the Universität Leipzig.
+Description: This package provides markdown templates for the Momentum Dashboard of the Universität Leipzig.
 License: use_gpl3_license()
 Encoding: UTF-8
 LazyData: true
